--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 
 		img1 = new Image();
 		loaded = false;
-		img1.src = "images/001.jpg";
+		img1.src = "imgs/img01.jpg";
 		img1.onload = function () {
 			ball1 = newImageBall(canvas, bk, 40, 40, 40, 2, 3, img1, 30);
 			ball1.draw();
@@ -205,7 +205,7 @@
 			}
 		};
 		img2 = new Image();
-		img2.src = "images/002.jpg";
+		img2.src = "imgs/img02.jpg";
 		img2.onload = function () {
 			ball2 = newImageBall(canvas, bk, 200, 100, 35, 5, 3, img2, 50);
 			ball2.draw();
