--- a/index.html
+++ b/index.html
@@ -178,9 +178,9 @@
 		// 背景を描画  （グラデーション）
 		grad  = context.createLinearGradient(0, 0, 0, 400);
 		// グラデーション終点のオフセットと色をセット
-		grad.addColorStop(0, "#0000CD");
+		grad.addColorStop(0, "#FFFFA0");
 		grad.addColorStop(0.5, "#FFFFE0");
-		grad.addColorStop(1, "#555555");
+		grad.addColorStop(1, "#FFCC00");
 		context.fillStyle = grad;
 		context.fillRect(0, 0, 600, 400);
 
