--- a/index.html
+++ b/index.html
@@ -219,8 +219,8 @@
 		};
 	};
     </script>
-</head>
-<body>
+
     <canvas id="canvasA" width="600" height="400"></canvas>
+	     <div>第三弾 検討中のため、代替です。よろしくお願いします。</div>
 </body>
 </html>
