--- a/index.html
+++ b/index.html
@@ -221,6 +221,8 @@
     </script>
 
     <canvas id="canvasA" width="600" height="400"></canvas>
-	     <div>第三弾 検討中のため、代替です。よろしくお願いします。</div>
+	     <div class = "textU">
+		     第三弾 検討中のため、代替です。よろしくお願いします。
+	     </div>
 </body>
 </html>
