--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <style> *{padding:20; margin:20;}
     			canvas{display:block;
     			margin:0  auto;}
+	    .textU{
+		    text-align: center;
+}
+	 
 				</style>
 	</head>
      <body>
