--- a/index.html
+++ b/index.html
@@ -225,7 +225,8 @@
 
   <canvas id="canvasA" width="600" height="400"></canvas>
   <div class = "textU">
-		     第三弾 検討中のため、代替です。よろしくお願いします。
+		     <!-- 第三弾 検討中のため、代替です。よろしくお願いします。 -->
+	                  第三弾の着想が湧かず滞っておりますもので申し訳ありません。
   </div>
 </body>
 </html>
